--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,6 +17,10 @@ spring:
       idleTimeout: 600000
       minimum-idle: 10
       maxLifetime: 1800000
-  jpa:
-    show-sql: true
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+
+logging:
+  level:
+    org:
+      springframework:
+        jdbc:
+          core: DEBUG
